unpackaged/objects/Residential_College__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Residential College History</relationshipLabel>
        <relationshipName>Residential_Colleges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DF__c</fullName>
        <label>DF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Residential_College_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residential College Name</label>
        <referenceTo>Residential_College_Master__c</referenceTo>
        <relationshipLabel>Residential Colleges</relationshipLabel>
        <relationshipName>Residential_Colleges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suite_No__c</fullName>
        <label>Suite No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Residential College</label>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Residential College ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Residential Colleges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>